--- a/app/src/main/res/layout/activity_start_reading.xml
+++ b/app/src/main/res/layout/activity_start_reading.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.application.text_recognition">
+    tools:context="com.example.application.Start_reading">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text=".........."
+        android:text=" "
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.274"
@@ -26,12 +26,9 @@
         android:layout_marginTop="100dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="200dp"
-        android:onClick="buttonStart"
-
         android:text="@string/start_reading"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
