--- a/app/src/main/res/layout/activity_start_reading.xml
+++ b/app/src/main/res/layout/activity_start_reading.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toBottomOf="@id/buttonStart" />
 
     <Button
+        style="@style/Widget.AppCompat.Button"
         android:id="@+id/buttonStart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,9 +27,17 @@
         android:layout_marginTop="100dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="200dp"
+        android:clickable="true"
+
         android:text="@string/start_reading"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+<!--    <Button-->
+<!--        android:id="@+id/buttonStart"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_margin="50dp"-->
+<!--        />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
